# ElementaryCpp

./: .gitignore  LICENSE  README.md  com.github.jeysonflores.elementarycpp.json  meson.build
.github/workflows/: main.yml
builddir/: build.ninja  compile_commands.json
builddir/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-dependencies.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  meson-info.json
builddir/meson-logs/: meson-log.txt
data/: com.github.jeysonflores.elementarycpp.appdata.xml  com.github.jeysonflores.elementarycpp.desktop  com.github.jeysonflores.elementarycpp.gschema.xml  meson.build
src/: Application.cpp  Application.h  MainWindow.cpp  MainWindow.h
